# PoST

./: .gitignore  CITATION.cff  LICENSE  README.md  eval_llm.py  pyproject.toml  trainer.py
figures_scripts/: analyze_alphas.py  analyze_spectra.py  generate_mqar_figures.py  generate_mqar_figures_bars.py  generate_mqar_figures_faceted.py  generate_mqar_table.py  mqar_table_output.tex  plot_heatmap.py
models/: __init__.py  post_gated_deltanet.py  post_mamba2.py  post_rwkv7.py
post_kernels/: debug_kernel.py  ssd_chunk_state.py  ssd_combined.py  test_kernel.py
scripts/: eval_llm.sh  eval_niah.sh  prepare_data.sh  recover_dataset.py  run_1.5b_30b.sh  run_180m_4b.sh  run_440m_9b.sh
tasks/: _post_ruler_base.yaml  common_utils.py  post_niah_multikey_1.yaml  post_niah_multikey_2.yaml  post_niah_multikey_3.yaml  post_niah_multiquery.yaml  post_niah_multivalue.yaml  post_niah_single_1.yaml  post_niah_single_2.yaml  post_niah_single_3.yaml  post_ruler_cwe.yaml  post_ruler_fwe.yaml  post_ruler_qa_hotpot.yaml  post_ruler_qa_squad.yaml  post_ruler_vt.yaml  qa_utils.py
zoology/: setup.py
zoology/zoology/: config.py  model.py  train.py
zoology/zoology/data/: multiquery_ar.py
zoology/zoology/experiments/: models_repo.py  post_mqar_all.py
zoology/zoology/mixers/: gated_delta_net.py  gated_delta_net_post.py  gla.py  gla_post.py  mamba2.py  post_mamba2_mixer.py  post_rwkv7_mixer.py  retnet.py  retnet_post.py  rwkv7.py  ttt.py
